--- a/views/products/index.ejs
+++ b/views/products/index.ejs
@@ -3,6 +3,7 @@
 <ul>
     <% products.forEach((product) => { %>
     <li><%= product.name %>: <%= product.price %> DH : <b><%= product.category %></b></li>
+    <a href="/products/<%= product._id %>">details</a>
     <% }); %>
 </ul>
 <%- include('../partials/footer'); -%>
