creating a product function

--- a/views/products/index.ejs
+++ b/views/products/index.ejs
@@ -6,4 +6,5 @@
     <a href="/products/<%= product._id %>">details</a>
     <% }); %>
 </ul>
+<a href="/products/new">New Product!</a>
 <%- include('../partials/footer'); -%>
