--- a/views/products/new.ejs
+++ b/views/products/new.ejs
@@ -1,11 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
+<%- include('../partials/header') %>
     <h1>New Product</h1>
     <form action="/products" method="post">
         <label for="">name</label>
@@ -29,5 +22,4 @@
         <br>
         <button>submit</button>
     </form>
-</body>
-</html>
+<%- include('../partials/footer') %>
