--- a/views/products/show.ejs
+++ b/views/products/show.ejs
@@ -3,5 +3,8 @@
 <h1><%= product.name %></h1>
 <h2><%= product.price %></h2>
 <p><b><%= product.category %></b></p>
+<form method="post" action="/products?_method=DELETE">
+    <button>Update</button>
+</form>
 
 <%- include('../partials/footer') %>
