--- a/views/products/show.ejs
+++ b/views/products/show.ejs
@@ -3,8 +3,7 @@
 <h1><%= product.name %></h1>
 <h2><%= product.price %></h2>
 <p><b><%= product.category %></b></p>
-<form method="post" action="/products?_method=DELETE">
-    <button>Update</button>
-</form>
+<a href="/products/<%= product._id %>/edit">Update this product</a>
+<a href="/products">All products</a>
 
 <%- include('../partials/footer') %>
