--- a/views/products/show.ejs
+++ b/views/products/show.ejs
@@ -3,7 +3,15 @@
 <h1><%= product.name %></h1>
 <h2><%= product.price %></h2>
 <p><b><%= product.category %></b></p>
-<a href="/products/<%= product._id %>/edit">Update this product</a>
+<br>
 <a href="/products">All products</a>
+<br>
+<a href="/products/<%= product._id %>/edit">Update this product</a>
+<br>
+<form action="/products/<%= product._id %>?_method=DELETE" method="post">
+    <button>DELETE</button>
+</form>
+
+
 
 <%- include('../partials/footer') %>
